--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "webpack-dev-server": "^3.11.0"
   }
 }
